--- a/app/src/main/res/layout/order_summary.xml
+++ b/app/src/main/res/layout/order_summary.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/order_summary_deets"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:fontFamily="casual"
         android:textDirection="ltr"
@@ -21,7 +21,7 @@
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/submit"
         android:layout_alignBottom="@id/order_summary_deets"
@@ -34,7 +34,7 @@
 
     <Button
         android:id="@+id/change"
-        android:layout_width="140dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/submit"
         android:layout_alignParentBottom="true"
